maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:31: error: illegal start of simple expression
  if (!aMurNord(x,y+1) && y>m) noteIndication(x,, y+1, i+1);
                                                ^ShortestPathMaze:33: error: ')' expected but '}' found.
} 
^